Add test-examples.js script to exercise every test. Add "test" target to each example to support this script.

--- a/aws-lodash-ts/package.json
+++ b/aws-lodash-ts/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc --watch",
-        "clean": "rm -rf dist"
+        "clean": "rm -rf dist",
+        "test": "node dist/index.js"
     },
     "dependencies": {
         "faastjs": "latest",
