--- a/aws-command/package.json
+++ b/aws-command/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "build": "tsc",
         "watch": "tsc --watch",
-        "clean": "rm -rf dist"
+        "clean": "rm -rf dist",
+        "test": "node dist/runfaast.js -d . ls -al"
     },
     "dependencies": {
         "faastjs": "latest"
