--- a/aws-cost-analyzer-ts/tsconfig.json
+++ b/aws-cost-analyzer-ts/tsconfig.json
@@ -9,6 +9,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true,
         "strict": true
     },
     "exclude": ["node_modules", "dist"]
