Add typescript as an explicit dependency. Don't rely on global typescript installation which may be an old version that doesn't compile the examples.

--- a/aws-command/package.json
+++ b/aws-command/package.json
@@ -10,5 +10,8 @@
     },
     "dependencies": {
         "faastjs": "latest"
+    },
+    "devDependencies": {
+        "typescript": "^4.1.3"
     }
 }
