--- a/aws-command/tsconfig.json
+++ b/aws-command/tsconfig.json
@@ -9,7 +9,7 @@
         "noFallthroughCasesInSwitch": true,
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
-        "strict": true
+        "strict": true,
     },
     "exclude": ["node_modules", "dist"]
 }
