--- a/aws-puppeteer-ts/package.json
+++ b/aws-puppeteer-ts/package.json
@@ -14,7 +14,8 @@
         "puppeteer-core": "^2.0.0"
     },
     "devDependencies": {
+        "@types/node": "11.13.14",
         "@types/puppeteer-core": "2.0.0",
-        "@types/node": "11.13.14"
+        "typescript": "^4.1.3"
     }
 }
