--- a/aws-sharp-ts/package.json
+++ b/aws-sharp-ts/package.json
@@ -13,7 +13,8 @@
         "sharp": "^0.23.0"
     },
     "devDependencies": {
+        "@types/node": "11.13.14",
         "@types/sharp": "0.23.0",
-        "@types/node": "11.13.14"
+        "typescript": "^4.1.3"
     }
 }
