--- a/aws-ts/package.json
+++ b/aws-ts/package.json
@@ -12,6 +12,7 @@
         "faastjs": "latest"
     },
     "devDependencies": {
-        "@types/node": "11.13.14"
+        "@types/node": "11.13.14",
+        "typescript": "^4.1.3"
     }
 }
