skip library type checking for aws-command example

--- a/aws-command/tsconfig.json
+++ b/aws-command/tsconfig.json
@@ -10,6 +10,7 @@
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
+        "skipLibCheck": true
     },
     "exclude": ["node_modules", "dist"]
 }
