--- a/aws-sharp-ts/package.json
+++ b/aws-sharp-ts/package.json
@@ -10,11 +10,11 @@
     },
     "dependencies": {
         "faastjs": "latest",
-        "sharp": "^0.23.0"
+        "sharp": "^0.29.0"
     },
     "devDependencies": {
-        "@types/node": "11.13.14",
-        "@types/sharp": "0.23.0",
+        "@types/node": "^16.11.11",
+        "@types/sharp": "^0.29.4",
         "typescript": "^4.1.3"
     }
 }
