--- a/aws-puppeteer-ts/tsconfig.json
+++ b/aws-puppeteer-ts/tsconfig.json
@@ -10,7 +10,8 @@
         "noImplicitReturns": true,
         "forceConsistentCasingInFileNames": true,
         "strict": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+        "esModuleInterop": true
     },
     "exclude": ["node_modules", "dist"]
 }
