--- a/aws-puppeteer-ts/package.json
+++ b/aws-puppeteer-ts/package.json
@@ -9,13 +9,12 @@
         "test": "node dist/index.js"
     },
     "dependencies": {
-        "chrome-aws-lambda": "^10.1.0",
+        "@sparticuz/chromium": "^103.0.0",
         "faastjs": "latest",
-        "puppeteer-core": "^10.1.0"
+        "puppeteer-core": "^14.4.1"
     },
     "devDependencies": {
-        "@types/node": "11.13.14",
-        "@types/puppeteer-core": "^5",
+        "@types/node": "^18.0.3",
         "typescript": "^4.9.4"
     }
 }
