--- a/aws-lodash-ts/package.json
+++ b/aws-lodash-ts/package.json
@@ -14,7 +14,7 @@
     },
     "devDependencies": {
         "@types/lodash": "4.14.149",
-        "@types/node": "11.13.14",
+        "@types/node": "^18.0.3",
         "typescript": "^4.9.4"
     }
 }
