--- a/gcp-ts/package.json
+++ b/gcp-ts/package.json
@@ -12,7 +12,7 @@
         "faastjs": "latest"
     },
     "devDependencies": {
-        "@types/node": "11.13.14",
+        "@types/node": "^18.0.3",
         "typescript": "^4.9.4"
     }
 }
